--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ svg {
 .sidebar {
   height: calc(100vh - 81px);
   grid-area: sidebar;
-  background-color: #121212;
+  background-color: #0E0E0E;
 }
 
 /* Inbox */
@@ -157,10 +157,40 @@ svg {
   margin-bottom: 15px;
 }
 
-.task-name {
+.task-title {
   display: flex;
   align-items: center;
   gap: 10px;
+  position: relative;
+}
+
+.checkbox {
+  position: absolute;
+  display: none;
+}
+
+.checkbox + label {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.checkbox + label::before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 3px;
+}
+
+.checkbox:checked + label::before {
+  content: url('./img/hollow-green-circle-svgrepo-com.svg');
+  display: flex;
+  align-items: center;
+  margin-left: 4px;
+  font-size: 0.875rem;
 }
 
 .task:hover {
@@ -168,7 +198,8 @@ svg {
 }
 
 .priority-icon {
-  fill: orange;
+  width: 25px;
+  height: 25px;
 }
 
 ::-webkit-scrollbar {
@@ -185,4 +216,67 @@ svg {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+/* Add task container */
+.add-task-bg {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0,0,0,.6);
+}
+
+.add-task-container {
+  width: 810px;
+  height: 126px;
+  background-color: #121212;
+  border-radius: 12px;
+  box-shadow:1px 1px 1px rgba(0, 0, 0, .4);
+}
+
+.task-input {
+  width: 94%;
+  height: 34px;
+  justify-self: center;
+  margin: 20px 25px;
+  outline: none;
+  border-radius: 12px;
+  color: black;
+  padding: 0 10px;
+  border: none;
+}
+
+.task-properties {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.task-prop-input {
+  width: 234px;
+  height: 34px;
+  border-radius: 12px;
+  background-color: #fff;
+  margin-left: 25px;
+  color: black;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.btn {
+  color: black;
+  padding: 8px 16px;
+  white-space: nowrap;
+  border-radius: 12px;
+  cursor: pointer;
 }
