--- a/src/style.css
+++ b/src/style.css
@@ -108,6 +108,8 @@ svg {
 .add-project {
   font-size: 0.875rem;
   cursor: pointer;
+  letter-spacing: 1px;
+  margin-top: 25px;
 }
 
 .add-project::before {
@@ -117,6 +119,35 @@ svg {
   display: inline-block;
   vertical-align: middle;
   margin-right: 10px;
+}
+
+.new-project-div {
+  color: black;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+  margin-bottom: 20px;
+  width: 200px;
+}
+
+.project-name-input {
+  grid-column: 1 / -1;
+}
+
+.project-name-input, .cancel-save, .save-project {
+  color: black;
+  padding: 5px;
+  border: none;
+  outline: none;
+}
+
+.cancel-save, .save-project {
+  cursor: pointer;
+}
+
+.project-name {
+  margin: 20px 0 20px 0;
+  cursor: pointer;
 }
 
 /* Main */
@@ -186,7 +217,7 @@ svg {
 }
 
 .checkbox:checked + label::before {
-  content: url('./img/hollow-green-circle-svgrepo-com.svg');
+  content: 'ok';
   display: flex;
   align-items: center;
   margin-left: 4px;
@@ -198,8 +229,21 @@ svg {
 }
 
 .priority-icon {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.priority-icon.low {
+  border: 2.5px solid yellow;
+}
+
+.priority-icon.moderate {
+  border: 2.5px solid orange;
+}
+
+.priority-icon.high {
+  border: 2.5px solid red;
 }
 
 ::-webkit-scrollbar {
@@ -219,7 +263,7 @@ svg {
 }
 
 /* Add task container */
-.add-task-bg {
+.add-creator-bg {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -229,7 +273,7 @@ svg {
   background-color: rgba(0,0,0,.6);
 }
 
-.add-task-container {
+.add-creator-container {
   width: 810px;
   height: 126px;
   background-color: #121212;
@@ -237,7 +281,7 @@ svg {
   box-shadow:1px 1px 1px rgba(0, 0, 0, .4);
 }
 
-.task-input {
+.creator-input {
   width: 94%;
   height: 34px;
   justify-self: center;
@@ -249,13 +293,13 @@ svg {
   border: none;
 }
 
-.task-properties {
+.creator-properties {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.task-prop-input {
+.creator-prop-input {
   width: 234px;
   height: 34px;
   border-radius: 12px;
@@ -264,7 +308,6 @@ svg {
   color: black;
   display: flex;
   align-items: center;
-  padding-left: 10px;
 }
 
 .icon {
@@ -279,4 +322,37 @@ svg {
   white-space: nowrap;
   border-radius: 12px;
   cursor: pointer;
+}
+
+.priority-select, .notes, .desc, .dateInput, .time {
+  width: 100%;
+  height: 34px;
+  border-radius: 12px;
+  background-color: #fff;
+  color: black;
+  border: none;
+  outline: none;
+}
+
+.priority-select option {
+  color: black;
+}
+
+.notes, .desc, .dateInput, .time {
+  padding: 10px;
+  resize: none;
+}
+
+/* project container */
+.project {
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+  padding: 10px;
+  margin: 15px 0;
+  cursor: pointer;
+}
+
+.project:hover {
+  background-color: #1A1A1A;
 }
