--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@ body {
   overflow: hidden;
 }
 
+a {
+  text-decoration: none;
+}
+
 .page-structure {
   display: grid;
   grid-template-columns: 300px 4fr;
@@ -63,6 +67,21 @@ svg {
 .inbox {
   padding: 20px 0 30px 48px;
   height: 156px;
+}
+
+.inbox-title {
+  font-size: 3rem;
+  position: relative;
+}
+
+.inbox-title::before {
+  content: url("./img/inbox-svgrepo-com.svg");
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  position: relative;
+  top: 3px;
 }
 
 .nav ul {
@@ -121,51 +140,22 @@ svg {
   margin-right: 10px;
 }
 
-.new-project-div {
-  color: black;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 5px;
-  margin-bottom: 20px;
-  width: 200px;
-}
-
-.project-name-input {
-  grid-column: 1 / -1;
-}
-
-.project-name-input, .cancel-save, .save-project {
-  color: black;
-  padding: 5px;
-  border: none;
-  outline: none;
-}
-
-.cancel-save, .save-project {
-  cursor: pointer;
-}
-
-.project-name {
-  margin: 20px 0 20px 0;
-  cursor: pointer;
-}
-
 /* Main */
 .main {
   grid-area: main;
   background-color: #1A1A1A;
 }
 
-.date-sec {
-  display: flex;
-  justify-content: space-between;
+.head-sec {
+  display: grid;
   align-items: center;
-  padding: 8px 250px 10px 250px;
+  padding: 20px 70px;
   background-color: #121212;
 }
 
 .date {
   text-align: center;
+  font-size: 3rem;
 }
 
 .date p {
@@ -262,7 +252,7 @@ svg {
   background: #555;
 }
 
-/* Add task container */
+/* Add container */
 .add-creator-bg {
   position: absolute;
   display: flex;
@@ -324,7 +314,15 @@ svg {
   cursor: pointer;
 }
 
-.priority-select, .notes, .desc, .dateInput, .time {
+.btn.cancel {
+  margin-left: 30px;
+}
+
+.btn.cancel.proj {
+  margin-left: 75px;
+}
+
+.priority-select, .notes, .desc, .dateInput, .time, .projects-select {
   width: 100%;
   height: 34px;
   border-radius: 12px;
@@ -334,7 +332,7 @@ svg {
   outline: none;
 }
 
-.priority-select option {
+.priority-select option, .projects-select option {
   color: black;
 }
 
@@ -353,6 +351,22 @@ svg {
   cursor: pointer;
 }
 
+.project-h1 {
+  font-size: 3rem;
+}
+
 .project:hover {
   background-color: #1A1A1A;
+}
+
+.date-wrapper {
+  display: grid;
+  grid-template-columns: 35px 400px 35px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.arrow-backward {
+  transform: rotate(180deg);
 }
